--- a/Contact.html
+++ b/Contact.html
@@ -30,7 +30,8 @@
             <h1>Phone</h1>
             <h2>555-555-5555</h2>
             <h1>Address</h1>
-            <h2><ul>123 West Highway</ul> <ul>North Pole, TX 40537 </ul> </h2>
+            <h2>123 West Highway</h2>
+            <h2>North Pole, TX 40537</h2>
 
 
         </div>
@@ -42,7 +43,7 @@
         <ul>
             <li><a href="https://twitter.com/Juste357" target="_blank" class="social twitter">Twitter</a></li>
             <li><a href="https://www.linkedin.com/in/justina-pierce-66922a173/" target="_blank" class="social linkedin">LinkedIn</a></li>
-            <li><a href="#" target="_blank" class="social github">Github</a></li>
+            <li><a href="https://github.com/Juste357?tab=repositories" target="_blank" class="social github">Github</a></li>
         </ul>
         <p class="copyright">Copyright 2020, Justina Pierce</p>
     </footer>
