--- a/Experience.html
+++ b/Experience.html
@@ -56,7 +56,7 @@
             <ul>
                 <li><a href="https://twitter.com/Juste357" target="_blank" class="social twitter">Twitter</a></li>
                 <li><a href="https://www.linkedin.com/in/justina-pierce-66922a173/" target="_blank" class="social linkedin">LinkedIn</a></li>
-                <li><a href="#" target="_blank" class="social github">Github</a></li>
+                <li><a href="https://github.com/Juste357?tab=repositories" target="_blank" class="social github">Github</a></li>
             </ul>
             <p class="copyright">Copyright 2020, Justina Pierce</p>
         </footer>
