--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
-  <body>
+<body>
 
     <div class="main-nav">
         <ul class="nav">
@@ -49,7 +49,7 @@
       <ul>
         <li><a href="https://twitter.com/Juste357" target="_blank" class="social twitter">Twitter</a></li>
         <li><a href="https://www.linkedin.com/in/justina-pierce-66922a173/" target="_blank" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" target="_blank" class="social github">Github</a></li>
+        <li><a href="https://github.com/Juste357?tab=repositories" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Justina Pierce</p>
     </footer>
