--- a/Experience.html
+++ b/Experience.html
@@ -8,14 +8,14 @@
     <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
     <body>
 
-        <div class="main-nav">
+        <nav class="main-nav">
             <ul class="nav">
                 <li class="name">Justina Pierce</li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Experience.html">Experience</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
-        </div>
+        </nav>
 
         <header>
             <img src="images/owl2.jfif" alt="Picture of an owl" class="profile-image">
@@ -24,7 +24,7 @@
         </header>
 
         <main class="flex">
-            <div class="card">
+            <article class="card">
                 <h1>Education</h1>
                     <img src="images/sxu.jfif" alt="Saint Xavier University Logo" class="experience">
                     <h2> <a href="https://www.sxu.edu/index.aspx" target="_blank">Saint Xavier University</a></h2>
@@ -35,9 +35,9 @@
                     <h2> <a href="https://www.morainevalley.edu/" target="_blank">Moraine Valley Community College</a> </h2>
                     <h3> Associates Degree in Science</h3>
                     <h4> August 2011-May 2013</h4>
-                    </div>
+            </article>
 
-                    <div class="card">
+            <article class="card">
                 <h1>Work Experience</h1>
                     <img src="images/Jacksonnl.jpg" alt="Jackson Logo" class="experience">
                     <h2> <a href="https://www.jackson.com/" target="_blank"> Jackson </a></h2>
@@ -48,7 +48,7 @@
                     <h2> <a href="https://www.53.com/content/fifth-third/en.html" target="_blank">Fifth Third Bank</a></h2>
                     <h3> Customer Service Representative</h3>
                     <h4> July 1016-June 2017</h4>
-            </div>
+            </article>
 
         </main>
 
