--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
 <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Justina Pierce</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="Experience.html">Experience</a></li>
           <li><a href="Contact.html">Contact</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/owl2.jfif" alt="Picture of an owl" class="profile-image">
@@ -24,15 +24,15 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <article class="card">
         <h2>Background</h2>
         <p>I am a processor in the insurance field looking to broaden my horizons and enter a world of creativity. I am excited to start this journey or becoming a web developer and look forward to a brighter future.</p>
         <p>I hope to earn my certification in front end development from Treehouse so that I can change my career path.</p>
         <h2>Fun Facts</h2>
         <p>A little more about myself is that my favorite animal is an owl and I am originally from Chicago. I love the city and I try to visit as often as I can.</p>
-      </div> 
+      </article>
 
-      <div class="card">
+      <article class="card">
         <h2>Goals</h2>
         <p>I am eager to learn these new skills and be proficient in the following:</p>
         <ul class="skills">
@@ -42,7 +42,7 @@
           <li>UX Design</li>
          </ul>
         <p>I would love to share my future skills, abilities, and creativity in helping clients reach their audience.</p>
-      </div> 
+      </article>
 
     </main>
     <footer>
