--- a/Contact.html
+++ b/Contact.html
@@ -8,14 +8,14 @@
         <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
     <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
             <li class="name">Justina Pierce</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="Experience.html">Experience</a></li>
             <li><a href="Contact.html">Contact</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
         <img src="images/owl2.jfif" alt="Picture of an owl" class="profile-image">
@@ -24,7 +24,7 @@
 
     <main>
 
-        <div class="card">
+        <article class="card">
             <h1>Email</h1>
             <h2> <a href="mailto:UNKNOWN@gmail.com?subject=Inquiry">UNKNOWN@gmail.com</a></h2>
             <h1>Phone</h1>
@@ -34,7 +34,7 @@
             <h2>North Pole, TX 40537</h2>
 
 
-        </div>
+        </article>
 
     </main>
 
